# MAGNET-BOX

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  install.sh
.github/: FUNDING.yml
.github/workflows/: release.yml
deploy/: Caddyfile  magnetbox.service
landing/: README.md  docs.html  index.html
src/: auth.rs  downloads.rs  engine.rs  http.rs  main.rs  metrics.rs  notify.rs  rss.rs
src/web/: account.html  admin.html  docs.html  index.html  login.html  manifest.webmanifest  openapi.json  register.html  settings.html  setup.html  sw.js
