[package]
name = "magnetbox"
version = "0.1.3"
edition = "2021"
description = "Self-hosted magnet/torrent → direct HTTP download & streaming, in one Rust binary. Built on librqbit."

[dependencies]
librqbit = "8.1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
argon2 = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
sysinfo = "0.33"
url = "2"
totp-rs = { version = "5.7", default-features = false, features = ["otpauth"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 2
